Tidy fourteen findings in the tests, and make two of them mean more (#162)
S1612 x3, S5785 x2, S6126 x3, S6204, S1130, S1172, S2925 x3. All confined to
src/test, so no CHANGELOG entry -- none of it changes anything a server owner
can see.

Two are more than tidying.

GateMaxOpenTimeTest slept 1.125 seconds across three tests to watch a clock it
could simply be told about. Pushing the recorded opening time into the past by
reflection -- which this suite already does for other private fields -- makes
them instant and deterministic. The five-millisecond sleep was worse than slow:
on a coarse clock both readings could land in the same millisecond and the test
would pass without proving the value had not moved. Mutating markGateOpened to
overwrite unconditionally still fails it, which it might not have before.

GateOneWayTest's zombieIn took a gate that nothing in the body read, and it was
actively misleading: every caller passed the same 10, 64, 20 whether it named
the origin or the destination, so the argument suggested a placement the method
did not honour. Gone, with the Javadoc rewritten to say what it does.

The three text blocks are YAML, where indentation is semantic, so the check
that matters is that the suite still parses them into the same pairs. It does.

1088 tests pass.

Co-authored-by: Claude Opus 5 <noreply@anthropic.com>